--- a/package.json
+++ b/package.json
@@ -23,18 +23,21 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/dom-speech-recognition": "^0.0.6",
     "@uiw/codemirror-theme-tokyo-night": "^4.19.11",
     "@uiw/react-codemirror": "^4.19.11",
     "endent": "^2.1.0",
     "eventsource-parser": "^1.0.0",
     "framer-motion": "^4.1.17",
     "next": "^15.1.6",
+    "openai": "^5.0.2",
     "react": "^19.0.0-rc.1",
     "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "^19.0.0-rc.1",
     "react-icons": "^4.9.0",
     "react-is": "^18.0.0",
-    "react-markdown": "^8.0.6",
+    "react-markdown": "^8.0.7",
+    "react-media-recorder": "^1.7.1",
     "react-router-dom": "^5.3.0",
     "remark-gfm": "^3.0.1",
     "typescript": "4.9.5",
