--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,14 @@
     "noEmit": true,
     "jsx": "preserve",
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
     "paths": {
       "@/*": [
-        "./src/*"
+        "./src/*",
+        "./app/*"
       ]
     },
     "plugins": [
