Fix build issues for production deployment: - Replace react-markdown with marked for better compatibility - Update module imports for eventsource-parser - Fix API route handlers - Clean up type declarations

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,10 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react/no-unescaped-entities": ["error", { "forbid": [">", "}"] }]
+  },
+  "settings": {
+    "next": {
+      "rootDir": "."
+    }
   }
 }
