--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "endent": "^2.1.0",
     "eventsource-parser": "^1.0.0",
     "framer-motion": "^4.1.17",
+    "marked": "^15.0.12",
     "next": "^15.1.6",
     "openai": "^5.0.2",
     "react": "^19.0.0-rc.1",
@@ -39,7 +40,6 @@
     "react-markdown": "^8.0.7",
     "react-media-recorder": "^1.7.1",
     "react-router-dom": "^5.3.0",
-    "remark-gfm": "^3.0.1",
     "typescript": "4.9.5",
     "web-vitals": "^1.1.2"
   },
