--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@uiw/react-codemirror": "^4.19.11",
     "endent": "^2.1.0",
     "eventsource-parser": "^1.0.0",
+    "firebase": "^12.0.0",
     "framer-motion": "^4.1.17",
     "next": "^15.1.6",
     "react": "^19.0.0-rc.1",
