--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "eventsource-parser": "^1.0.0",
     "firebase": "^12.0.0",
     "framer-motion": "^4.1.17",
-    "next": "^15.1.6",
+    "next": "^15.5.7",
     "openai": "^5.0.2",
-    "react": "^19.0.0-rc.1",
+    "react": "^19.0.0",
     "react-custom-scrollbars-2": "^4.2.1",
-    "react-dom": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0",
     "react-icons": "^4.9.0",
     "react-is": "^18.0.0",
     "react-markdown": "^8.0.7",
@@ -51,7 +51,7 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
     "eslint": "8.37.0",
-    "eslint-config-next": "^15.1.6",
+    "eslint-config-next": "^15.5.7",
     "eventsource": "^2.0.2",
     "postcss": "^8.4.21",
     "prettier-plugin-tailwindcss": "^0.2.6",
